--- a/singapore/singapore.sumo.cfg
+++ b/singapore/singapore.sumo.cfg
@@ -1,7 +1,7 @@
 <configuration>
     <input>
         <net-file value="singapore.net.xml"/>
-        <route-files value="busFlows.rou.xml"/>
+        <route-files value="busFlows.rou.xml,randomCars.rou.xml"/>
         <additional-files value="busstops.xml"/>
     </input>
 </configuration>
