--- a/singapore/sumo/singapore.sumo.cfg
+++ b/singapore/sumo/singapore.sumo.cfg
@@ -1,6 +1,6 @@
 <configuration>
     <input>
-        <net-file value="singapore.net.xml"/>
+        <net-file value="singaporeInitial.net.xml"/>
         <route-files value="busFlows.rou.xml"/>
         <additional-files value="busstops.xml"/>
     </input>
